--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2011-12-15 v0.9
+
+Add mapping from backends to directors and directors to origins
+
 2011-11-03 v0.8
 
 Add list_* to all objects
@@ -6,4 +10,4 @@ Add Healthchecks and Syslog endpoint streaming
 
 2011-11-02 v0.5
 
-Initial release
+Initial releasee
