--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2013-11-26 v1.02
+
+Fix rdoc dependency and quorum spelling (Kristoffer Renholm)
+
 2013-10-03 v1.01
 
 Add historical stats functionality
